# mcp-server-qiwei

./: .gitignore  README.md  pyproject.toml
src/mcp-server-qiwei/: __init__.py  app_config.py  core.py  server.py
src/mcp_server_qiwei/: __init__.py  core.py  server.py
src/mcp_server_qiwei.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
