[project]
name = "mcp-server-qiwei"
version = "0.1.3"
description = "mcp server send new message to qiwei group"
authors = [
    {name = "ryanjhzheng"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["mcp_server_qiwei.server:main"]
